--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
                       <div class="card-item__bottom">
                         <span class="cart-item__quantity">1x</span>
-                        <span class="cart-item__price"> @$5.50</span>
-                        <span class="cart-item__total">$5.50</span>
+                        <span class="cart-item__price"> @5.50</span>
+                        <span class="cart-item__total">5.50</span>
                       </div>
                     </div>
 
