--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 height="128"
               />
               <div class="card-list">
-                  </ul>
+               
+              </div>
             </aside>
           </div>
         </section>
@@ -104,4 +105,4 @@
     </main>
     <script type="module" src="./js/app.js"></script>
   </body>
-</html>S
+</html>
