--- a/index.html
+++ b/index.html
@@ -95,9 +95,26 @@
                 width="128"
                 height="128"
               />
-              <div class="card-list">
-               
+              <div class="card-list"></div>
+
+              <div class="order-total">
+                <span>Order Total</span>
+                <p>$00.00</p>
               </div>
+              <div class="neutral">
+                <img
+                  src="./images/carbon_tree.svg"
+                  carbon-neutral
+                  width="20"
+                  height="20"
+                />
+                <p>
+                  This is a
+                  <strong>carbon-neutral</strong>
+                  delivery
+                </p>
+              </div>
+              <button class="order-btn">Confirm Order</button>
             </aside>
           </div>
         </section>
